--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -11,8 +11,13 @@
 }
 .food-slogan{
     font-family:'Caveat', 'cursive';
-   
-    color: white;
+    color: white; 
     
-    
+}
+.nav-P{
+    margin-right: 40px;
+    text-decoration: none;
+    font-size: 20px;
+    color: rgb(229, 171, 53);
+    font-weight: bold;
 }
