--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -14,10 +14,14 @@
     color: white; 
     
 }
-.nav-P{
+.nav-link{
+    
     margin-right: 40px;
     text-decoration: none;
     font-size: 20px;
     color: rgb(229, 171, 53);
     font-weight: bold;
+}
+.nav-link:hover{
+    color: rgb(46, 220, 185);
 }
