conditional user profile done

--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -25,3 +25,12 @@
 .nav-link:hover{
     color: rgb(46, 220, 185);
 }
+.user-profile{
+    width: 45px;
+    height: 45px;
+    color: rgb(255, 217, 2)
+}
+
+#basic-nav-dropdown{
+
+}
