--- a/src/Pages/RecipeCard/RecipeCard.css
+++ b/src/Pages/RecipeCard/RecipeCard.css
@@ -1,6 +1,13 @@
 
-
 .recipe-image{
     width: 385px;
     height: 300px;
+}
+
+@media only screen and (max-width:576px){
+  
+    .recipe-image{
+        width: 247px;
+        height: 300px;
+    }
 }
