--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -26,11 +26,10 @@
     color: rgb(46, 220, 185);
 }
 .user-profile{
-    width: 45px;
-    height: 45px;
-    color: rgb(255, 217, 2)
+    width: 60px;
+    height: 60px;
+    color: rgb(255, 217, 2);
+    border-radius: 50%;
+    border:4px solid rgb(185, 185, 1)
 }
 
-#basic-nav-dropdown{
-
-}
