--- a/src/Pages/RecipeCard/RecipeCard.css
+++ b/src/Pages/RecipeCard/RecipeCard.css
@@ -4,10 +4,10 @@
     height: 300px;
 }
 
-@media only screen and (max-width:576px){
+/* @media only screen and (max-width:576px){
   
     .recipe-image{
         width: 247px;
         height: 300px;
     }
-}
+} */
