--- a/src/Pages/Blog/Blog.css
+++ b/src/Pages/Blog/Blog.css
@@ -13,3 +13,14 @@
     bottom: 10px;
     left: 10px;
 }
+
+@media only screen and (max-width:576px){
+    .blog-img{
+        width: 300px;
+        height:400px;
+    }
+    .fixed-height{
+        min-height: 800px;
+        position: relative;
+    }
+}
