--- a/src/Pages/Home/ExtraSection2/ExtraSection2.css
+++ b/src/Pages/Home/ExtraSection2/ExtraSection2.css
@@ -7,3 +7,15 @@
     height: 600px;
     margin: 20px 0;
 }
+
+@media only screen and (max-width:576px){
+    .dessert-img{
+        width: 100%;
+        height:300px;
+    }
+    .card-height{
+        width: 300px;
+        height: 700px;
+        margin: 20px 0;
+    }
+}
