--- a/src/Pages/Blog/Blog.css
+++ b/src/Pages/Blog/Blog.css
@@ -16,11 +16,15 @@
 
 @media only screen and (max-width:576px){
     .blog-img{
-        width: 300px;
+        width: 349px;
         height:400px;
     }
     .fixed-height{
-        min-height: 800px;
+        min-height: 850px;
         position: relative;
+    }
+    .dld-btn{
+        display: flex;
+        margin:20px auto;
     }
 }
