--- a/src/Pages/ChefBanner/ChefBanner.css
+++ b/src/Pages/ChefBanner/ChefBanner.css
@@ -5,14 +5,27 @@
     background-size: cover;
 
 }
+.size{
+    width: 700px;
+    height: 800px;
+}
 .b-ground2{
     background-color: rgba(53, 47, 57, 0.166);
+}
+.chef-bio{
+   width: 500px;
 }
 
 @media only screen and (max-width:576px){
   
     .size{
+        width: 400px;
+        height: 500px;
+    }
+    .chef-bio{
         width: 300px;
-        height: 400px;
+     }
+     .b-ground2{
+        background-color: rgba(53, 47, 57, 0.166);
     }
 }
